Add service address to service list

--- a/index.html
+++ b/index.html
@@ -66,13 +66,8 @@
               <td>{{service.service_id}}</td>
               <td>{{service.customer_name}}</td>
               <td>{{service.service_name}}</td>
-              <td>{{service.download}}/{{service.upload}} Mbps</td>
-              <td>{{service.agreement}}</td>
-              <td>{{service.street}}</td>
-              <td>{{service.city}}</td>
-              <!--<td>{{service.customer_info}}</td>-->
-              <td>{{service.service_info}}</td>
-              <!--<td>{{#link-to 'service' service.service_id}}Upravit{{/link-to}}</td>-->
+              <td>{{service.download}}/{{service.upload}}</td>
+              <td>{{service.address_label}}</td>
             </tr>
           {{/each}}
           </tbody>
