--- a/index.html
+++ b/index.html
@@ -79,55 +79,7 @@
       {{outlet}}
     </script>
 
-    <script type="text/x-handlebars" data-template-name="components/gps-link">
-      {{#if cord}}
-        <a href="http://www.google.com/maps?q={{cord}}&t=k" target="_blank">
-          {{#unless hideIcon}}
-            <i class="glyphicon glyphicon-map-marker"></i>
-          {{/unless}}
-          {{#unless hideLabel}}
-            {{gps cord}}
-          {{/unless}}
-        </a>
-      {{/if}}
-    </script>
-
-    <script type="text/x-handlebars" data-template-name="components/place-editor">
-      <hr />
-      <p>
-        <label>Adresa:</label>
-        <input id="addressSelectorInput" placeholder="{{service.address_label}}" type="text" />
-        <!-- <a style="margin-left: -21px;"><i class="glyphicon glyphicon-remove tiny"></i></a> -->
-        <!-- {{service.address_label}} -->
-        {{#unless isAddressPlace}}
-          <a {{action "clearAddress"}}><i class="glyphicon glyphicon-remove"></i></a>
-        {{/unless}}
-        {{gps-link cord=service.address_place}}
-      </p>
-      <p>
-        <label>GPS:</label>
-        <input id="gpsInput" placeholder="{{gps service.place}}" />
-        {{#unless isAddressPlace}}
-          <a {{action "clearGps"}}><i class="glyphicon glyphicon-remove"></i></a>
-        {{/unless}}
-        {{gps-link cord=service.place hideLabel=true}}
-      </p>
-      <hr />
-      <div style="color: gray; font-size: small;">
-        <p>{{service.address_id}}</p>
-        <p>{{service.address_label}}</p>
-        <p>{{service.address_place}}</p>
-        <p>{{service.place}}</p>
-        <p>{{isAddressPlace}}</p>
-      </div>
-    </script>
-
     <script type="text/x-handlebars" id="service/index" data-template-name="service/index">
-      {{place-editor
-        service=model.service
-        onAddress=(action "addressSelected")
-        onPlace=(action "placeSelected")
-      }}
       <h2>{{customerName}} {{if isDraft '(DRAFT)'}}
         {{#unless isDraft}}
           <a href="https://sis.silesnet.net/account/customer/view.html?customerId={{model.customer.id}}&action=showDetail" target="_blank"><i class="glyphicon glyphicon-user tiny"></i></a>
@@ -454,20 +406,11 @@
         </div>
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label>Adresa:</label>
-            <p>{{model.form.service.address_label}}
-            {{#if model.form.service.address_place}}
-              <a href="http://www.google.com/maps?q={{model.form.service.address_place}}&t=k" target="_blank"><i class="glyphicon glyphicon-map-marker"></i></a>
-            {{/if}}
-            </p>
-            <p>{{model.form.service.address_place}}</p>
-            {{address-selector onAddress=(action "addressSelected")}}
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6 form-group">
-            <label>GPS:</label>
-            {{gps-cord value=(mut model.form.service.place)}}
+            {{place-editor
+              service=model.form.service
+              onAddress=(action "addressSelected")
+              onPlace=(action "placeSelected")
+            }}
           </div>
         </div>
         <div class="row">
@@ -787,17 +730,37 @@
       {{/if}}
     </script>
 
-    <script type="text/x-handlebars" data-template-name="components/address-selector">
-      <input id="addressSelectorInput" />
-    </script>
-
-    <script type="text/x-handlebars" data-template-name="components/gps-cord">
-      <input id="gpsCordInput" />
-      {{#if value}}
-        <a href="http://www.google.com/maps?q={{value}}&t=k" target="_blank"><i class="glyphicon glyphicon-map-marker"></i></a>
+    <script type="text/x-handlebars" data-template-name="components/gps-link">
+      {{#if cord}}
+        <a href="http://www.google.com/maps?q={{cord}}&t=k" target="_blank">
+          {{#unless hideIcon}}
+            <i class="glyphicon glyphicon-map-marker"></i>
+          {{/unless}}
+          {{#unless hideLabel}}
+            {{gps cord}}
+          {{/unless}}
+        </a>
       {{/if}}
     </script>
 
+    <script type="text/x-handlebars" data-template-name="components/place-editor">
+      <p>
+        <label>Adresa:</label><br />
+        <input id="addressSelectorInput" placeholder="{{service.address_label}}" size="40" type="text" />
+        {{#unless isAddressPlace}}
+          <a {{action "clearAddress"}}><i class="glyphicon glyphicon-remove"></i></a>
+        {{/unless}}
+        {{gps-link cord=service.address_place}}
+      </p>
+      <p>
+        <label>GPS:</label><br />
+        <input id="gpsInput" placeholder="{{gps service.place}}" size="40" type="text" />
+        {{#unless isAddressPlace}}
+          <a {{action "clearGps"}}><i class="glyphicon glyphicon-remove"></i></a>
+        {{/unless}}
+        {{gps-link cord=service.place hideLabel=true}}
+      </p>
+    </script>
 
     <script type="text/javascript" language="javascript" src="js/jquery.min.js?v=${VERSION}"></script>
     <script type="text/javascript" language="javascript" src="js/jquery-ui.min.js?v=${VERSION}"></script>
