Add active link to PPPoE interface

--- a/index.html
+++ b/index.html
@@ -285,7 +285,10 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Interface:</strong></p></div>
-                  <div class="col-sm-10">{{model.pppoe.interface}}</div>
+                  <div class="col-sm-10">
+                    <a href="http://{{model.pppoe.interface}}" target="_blank">{{model.pppoe.interface}}</a>
+                    <i class="glyphicon glyphicon-new-window"></i>
+                  </div>
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Location:</strong></p></div>
