--- a/index.html
+++ b/index.html
@@ -225,7 +225,10 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Interface:</strong></p></div>
-                  <div class="col-sm-10">{{model.dhcp_wireless.interface}}</div>
+                  <div class="col-sm-10">
+                    <a href="http://{{model.dhcp_wireless.interface}}" target="_blank">{{model.dhcp_wireless.interface}}</a>
+                    <i class="glyphicon glyphicon-new-window"></i>
+                  </div>
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>Location:</strong></p></div>
