--- a/index.html
+++ b/index.html
@@ -202,7 +202,13 @@
                 </div>
                 <div class="row">
                   <div class="col-sm-2"><p class="text-right"><strong>IP:</strong></p></div>
-                  <div class="col-sm-10">{{model.dhcp.ip}}</div>
+                  <div class="col-sm-10">
+                    {{#if model.dhcp_connection.ip}}
+                      {{model.dhcp_connection.ip}}
+                    {{else}}
+                      {{model.dhcp.ip}}
+                    {{/if}}
+                  </div>
                 </div>
               </div>
               </div>
